# Pi-Pico

./: CMakeLists.txt  CmakeLists  README.md  blink.c  instructions
programs/: blink.c
src/: Navodila
src/TEMPLATE/: CMakeLists.txt
src/dual-core/: CMakeLists.txt  main.c
src/dual-core2/: CMakeLists.txt  main.c
src/fade/: CMakeLists.txt  main.c
